@@ -15,6 +15,7 @@ Nagios 3.x Change Log
 * Changes to sample config files and installation location
 * Changed debug file format to include current pid
 * Added 'initial_state' option to host and service definitions to allow for non-UP/OK initial states
+* Minor changes to freshness threshold calculation
 * Documentation updates
 
 
